ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportapp-ingress
spec:
  rules:
    - http:
        paths:
          - path: /usuario/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-usuario
                port:
                  number: 80
          - path: /autenticador/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-autenticador
                port:
                  number: 80
          - path: /perfil-deportivo/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-perfil-deportivo
                port:
                  number: 80
          - path: /molestias/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /lesiones/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
          - path: /deportes/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-ms-catalogo
                port:
                  number: 80
